# project-021

./: Dockerfile  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml  requirements.txt  run_tests.sh
sidewinder/: __init__.py
sidewinder/agents/: analyzer.py  base.py  tester.py  transformer.py
sidewinder/core/: analyzer.py  config.py  llm.py  pipeline.py  state.py  test_config.py
sidewinder/testing/: data_gen.py  data_patterns.py  data_types.py  environment.py  executor.py  metrics.py  registry.py  reporting.py  runner.py
tests/: run_e2e_tests.py
tests/config/: test_scenarios.json
tests/data/source/: customers.json  orders.json
tests/output/: code_report.html  requirements_report.html  test_report.html
tests/results/: test_results.json
