[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sidewinder"
version = "0.0.1"
authors = [
  { name="William Garrett Bryan" },
]
description = "An intelligent data engineering agent for building ETL pipelines"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "langgraph>=0.0.10",
    "pydantic>=2.0.0",
    "pytest>=7.0.0",
    "pandas>=2.0.0",
    "duckdb>=0.9.0",
    "pyarrow>=14.0.0",
    "boto3>=1.28.0",
    "google-cloud-storage>=2.0.0",
    "azure-storage-blob>=12.0.0",
    "databricks-connect>=13.0.0",
]

[project.urls]
"Homepage" = "https://github.com/willgbryan/sidewinder"
"Bug Tracker" = "https://github.com/willgbryan/sidewinder/issues" 